--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,102 +1,254 @@
 @media only screen and (max-width: 700px) {
-  #nav--bar .nav-icons {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   margin: auto;
-  }
-
-  #nav--bar .nav-icons a {
-   padding:0 10px
-  }
-
-  #show-content {
-   display: block;
-   padding: 5px;
-  }
-
-  #show-content .box1 {
-   margin: auto;
-   height: 300px;
-   width: 70%;
-  }
-  #show-content .box1{
+   #nav--bar .nav-icons {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     margin: auto;
+   }
+ 
+   #nav--bar .nav-icons a {
+     padding: 0 10px;
+   }
+ 
+   #show-content {
+     display: block;
+     padding: 5px;
+   }
+ 
+   #show-content .box1 {
+     margin: auto;
+     height: 300px;
+     width: 70%;
+   }
+   #show-content .box1 {
      border: 1px solid #aaa;
      border-radius: 25px;
-     background: #F6F930;
+     /* background: #f6f930; */
+     background: yellow;
      font-weight: bold;
      font-style: italic;
-     color: #00635D;
-     margin-bottom:5px;
+     /* color: #00635d; */
+     color: black;
+     margin-bottom: 5px;
      height: 400px;
- }
-
- #show-content .box1:hover {
-  box-shadow: 10px 10px 5px #aaa;
- }
-  .main-footer input{
-   width: 60%;
-  }
-
-  #detail--section {
-     display: block;
-     padding: 20px;
-     background: #f4f4f4;
-     margin: auto;
-  }
-
-  #detail--section h1 {
-     text-align: center;
-     font-style: italic;
-  }
-
-  #detail--section .product_detail img {
+   }
+ 
+   #show-content .box1:hover {
+     box-shadow: 10px 10px 5px #aaa;
+   }
+   .main-footer input {
+     width: 60%;
+   }
+ 
+   /* Form Information */
+   .row {
+     display: -ms-flexbox; /* IE10 */
      display: flex;
-     justify-content: center;
-     align-items: center;
-     margin: auto;
-     border-radius: 5px;
-  }
-
-  #detail--section .product_detail .detail {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     margin: auto;
-     padding: 5px;
-  }
-
-  #detail--section .product_detail .detail p {
-   text-align: center;
-     padding-right: 5px;
-     line-height: 1.7rem;
-  }
-
-  #detail--section p {
-     line-height: 1.7rem;
-  }
-  .promotions ul {
-     padding: 0 30px 0;
-  }
-
-  .promotions ul li {
-     list-style: circle;
-     line-height: 1rem;
-  }
-
-  .add-to-cart {
-     display: block;
-     width: 100%;
-     padding: 5px;
-     background: #00635D;
+     -ms-flex-wrap: wrap; /* IE10 */
+     flex-wrap: wrap;
+     margin: 0 -16px;
+   }
+ 
+   .col-25 {
+     -ms-flex: 25%; /* IE10 */
+     flex: 25%;
+   }
+ 
+   .col-50 {
+     -ms-flex: 50%;
+     flex: 100%;
+   }
+ 
+   .col-75 {
+     -ms-flex: 75%; /* IE10 */
+     flex: 75%;
+   }
+ 
+   .col-25,
+   .col-50,
+   .col-75 {
+     padding: 0 16px;
+   }
+ 
+   .container {
+     background-color: white;
+     padding: 5px 20px 15px 20px;
+     border: 1px solid lightgrey;
+     border-radius: 20px;
+     margin-top: 20px;
+     margin-right: 10px;
+     margin-left: 10px;
+   }
+ 
+   .container-1 {
+     background-color: yellow;
+     padding: 5px 20px 15px 20px;
+     border: 1px solid lightgrey;
+     border-radius: 20px;
+     margin-top: 20px;
+     margin-right: 15px;
+     margin-left: 10px;
+     box-shadow: 5px 5px 30px #aaa;
+   }
+ 
+   .container-2 {
+     background-color: yellow;
+     padding: 5px 20px 15px 20px;
+     border: 1px solid lightgrey;
+     border-radius: 20px;
+     margin-top: 20px;
+     margin-left: -6px;
+     margin-right: -2px;
+   }
+ 
+   .icon-container {
+     margin-bottom: 20px;
+     padding: 7px 0;
+     font-size: 24px;
+   }
+ 
+   .btn {
+     background-color: black;
+     color: white;
+     padding: 12px;
+     margin: 10px 0;
      border: none;
-     border-radius: 5px;
-     margin-top: 10px;
-     color:#f4f4f4;
-  }
+     width: 100%;
+     border-radius: 3px;
+     cursor: pointer;
+     font-size: 17px;
+     text-align: center;
+   }
+ 
+   .btn:hover {
+     background-color: black;
+     color: yellow;
+   }
+ 
+   .divider h2 {
+     text-align: center;
+     padding: 10px;
+     margin-top: 5px;
+     background-color: black;
+     color: yellow;
+   }
+ 
+   .billing input,
+   label {
+     margin-left: 15px;
+     width: 90%;
+   }
+ 
+   .billing fieldset {
+     width: 100%;
+     border-radius: 20px;
+   }
+ 
+   legend {
+     text-align: center;
+     font-weight: bold;
+   }
+ 
+   input[type="text"] {
+     margin-bottom: 20px;
+     padding: 12px;
+     border: 1px solid #ccc;
+     border-radius: 3px;
+   }
+ 
+   input:hover {
+     background-color: #f2f2f2;
+   }
+ 
+   label {
+     margin-bottom: 10px;
+     display: block;
+   }
+ 
+   span.price {
+     float: right;
+     color: grey;
+   }
+ 
+   #payment-fieldset {
+     width: 100%;
+     margin-top: 25px;
+     margin-right: 10px;
+     border-radius: 20px;
+   }
+ 
+   #payment-fieldset legend {
+     text-align: center;
+   }
+ 
+   #payment-fieldset input {
+     width: 100%;
+     margin-left: -2px;
+   }
 
-  .add-to-cart:hover {
-     color: #F6F930;
-     background: #033531;
-  }
-}
+   #detail--section {
+      display: block;
+      padding: 20px;
+      background: #f4f4f4;
+      margin: auto;
+   }
+ 
+   #detail--section h1 {
+      text-align: center;
+      font-style: italic;
+   }
+ 
+   #detail--section .product_detail img {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      border-radius: 5px;
+   }
+ 
+   #detail--section .product_detail .detail {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      padding: 5px;
+   }
+ 
+   #detail--section .product_detail .detail p {
+    text-align: center;
+      padding-right: 5px;
+      line-height: 1.7rem;
+   }
+ 
+   #detail--section p {
+      line-height: 1.7rem;
+   }
+   .promotions ul {
+      padding: 0 30px 0;
+   }
+ 
+   .promotions ul li {
+      list-style: circle;
+      line-height: 1rem;
+   }
+ 
+   .add-to-cart {
+      display: block;
+      width: 100%;
+      padding: 5px;
+      background: #00635D;
+      border: none;
+      border-radius: 5px;
+      margin-top: 10px;
+      color:#f4f4f4;
+   }
+ 
+   .add-to-cart:hover {
+      color: #F6F930;
+      background: #033531;
+   }
+ }
+ 
+
+ 
+ 
