rendered Cart items on the checkout page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,9 +52,14 @@ input {
   color: black;
 }
 
+.deleteBtn {
+  background: none;
+  border: none;
+  margin-left: 5px;
+}
+
 .cart-button:hover {
-  width: 26px;
-  height: 26px;
+  color:#00635D;
   transition: width 2s;
 }
 
