--- a/src/css/style.css
+++ b/src/css/style.css
@@ -429,8 +429,50 @@ span.price {
     margin-top: 10px;
     color:#f4f4f4;
  }
+ .removeItem {
+   
+    padding: 5px;
+    background: #00635D;
+    border: none;
+    border-radius: 5px;
+    color: #ffff;
+    margin-top: 10px;
+    color:#f4f4f4;
+ }
 
  .add-to-cart:hover {
     color: #F6F930;
     background: #033531;
  }
+ .removeItem:hover {
+    color: #F6F930;
+    background: #033531;
+ }
+
+ .card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  background: #f4f4f4;
+  height: 600px;
+ }
+
+ .card h1 {
+  border: 1px solid #aaa;
+  padding: 30px;
+  box-shadow: 10px 10px 5px 5px #aaa;
+ }
+
+ .alert {
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  background: #f2f2f2;
+  color: #0f0f0f;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 7px 5px #aaa;
+ }
+
+ 
