--- a/src/css/style.css
+++ b/src/css/style.css
@@ -475,4 +475,15 @@ span.price {
   box-shadow: 5px 7px 5px #aaa;
  }
 
+.del {
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+  background: #a81212;
+  color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 5px 7px 5px #aaa;
+}
+
  
