Added a Fav Icon

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -237,6 +237,7 @@ input {
   margin-top: 20px;
   margin-right: 14px;
   box-shadow: 5px 5px 30px #aaa;
+  font-size: small;
 }
 
 .container-1:hover {
